--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Chart.cs" />
     <Compile Include="Models\DataBase.cs" />
     <Compile Include="Models\Measurement.cs" />
     <Compile Include="Models\Sensor.cs" />
